--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         /* Hero Section (Home Page) - Usando a imagem como fundo */
         .hero {
-            background-image: url('home_page_final.png');
+            background-image: url('home_page.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
